--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,21 +14,28 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
+            android:id="@+id/collapsing_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/white"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/image_background"
+            <FrameLayout
+                android:id="@+id/map_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:layout_height="match_parent">
+
+                <fragment
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+            </FrameLayout>
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/detail_toolbar"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
@@ -44,15 +51,86 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:id="@+id/text_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/margin_m"
-            android:textColor="@color/black"
-            android:textIsSelectable="true"
-            android:textSize="@dimen/text_title"
-            tools:text="Title" />
+            android:orientation="vertical"
+            android:padding="@dimen/margin_m">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_m"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image_view_flag_country"
+                    android:layout_width="@dimen/flag_width_large"
+                    android:layout_height="@dimen/flag_height_large"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/text_native_name"
+                    style="@style/TextContent"
+                    android:layout_marginStart="@dimen/margin_m"
+                    android:textSize="@dimen/text_title"
+                    tools:text="Population" />
+            </LinearLayout>
+
+            <View style="@style/Line" />
+
+            <TextView
+                android:id="@+id/text_capital"
+                style="@style/TextContent"
+                android:textSize="@dimen/text_title"
+                tools:text="Capital" />
+
+            <TextView
+                android:id="@+id/text_region"
+                style="@style/TextContent"
+                tools:text="Region" />
+
+            <TextView
+                android:id="@+id/text_demonym"
+                style="@style/TextContent"
+                tools:text="Demonym" />
+
+            <TextView
+                android:id="@+id/text_area"
+                style="@style/TextContent"
+                tools:text="Area" />
+
+            <TextView
+                android:id="@+id/text_population"
+                style="@style/TextContent"
+                tools:text="Population" />
+
+            <View style="@style/Line" />
+
+            <TextView
+                android:id="@+id/text_languages"
+                style="@style/TextContent"
+                android:text="@string/languages" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_languages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <View style="@style/Line" />
+
+            <TextView
+                android:id="@+id/text_currency"
+                style="@style/TextContent"
+                android:text="@string/currencies" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_currency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
