--- a/app/src/main/res/layout/item_country_list.xml
+++ b/app/src/main/res/layout/item_country_list.xml
@@ -21,7 +21,8 @@
             android:id="@+id/image_view_flag_country"
             android:layout_width="@dimen/flag_width"
             android:layout_height="@dimen/flag_height"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/text_view_title_item"
@@ -37,4 +38,5 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Title" />
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
