--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,31 +1,34 @@
 <resources>
-<dimen name="height_item">48dp</dimen>
+    <dimen name="height_item">48dp</dimen>
 
-<dimen name="margin_2xs">2dp</dimen>
-<dimen name="margin_xs">4dp</dimen>
-<dimen name="margin_s">8dp</dimen>
-<dimen name="margin_m">16dp</dimen>
-<dimen name="margin_l">24dp</dimen>
-<dimen name="margin_xl">32dp</dimen>
+    <dimen name="margin_2xs">2dp</dimen>
+    <dimen name="margin_xs">4dp</dimen>
+    <dimen name="margin_s">8dp</dimen>
+    <dimen name="margin_m">16dp</dimen>
+    <dimen name="margin_l">24dp</dimen>
+    <dimen name="margin_xl">32dp</dimen>
 
-<dimen name="icon_xs">16dp</dimen>
-<dimen name="icon_s">24dp</dimen>
-<dimen name="icon_m">32dp</dimen>
-<dimen name="icon_l">48dp</dimen>
-<dimen name="icon_xl">80dp</dimen>
-<dimen name="icon_2xl">120dp</dimen>
-<dimen name="icon_3xl">160dp</dimen>
+    <dimen name="icon_xs">16dp</dimen>
+    <dimen name="icon_s">24dp</dimen>
+    <dimen name="icon_m">32dp</dimen>
+    <dimen name="icon_l">48dp</dimen>
+    <dimen name="icon_xl">80dp</dimen>
+    <dimen name="icon_2xl">120dp</dimen>
+    <dimen name="icon_3xl">160dp</dimen>
 
-<dimen name="flag_width">64dp</dimen>
-<dimen name="flag_height">48dp</dimen>
+    <dimen name="flag_width">64dp</dimen>
+    <dimen name="flag_height">48dp</dimen>
+    <dimen name="flag_width_large">128dp</dimen>
+    <dimen name="flag_height_large">96dp</dimen>
 
-<dimen name="button_height_m">36dp</dimen>
-<dimen name="button_height_l">48dp</dimen>
+    <dimen name="button_height_m">36dp</dimen>
+    <dimen name="button_height_l">48dp</dimen>
 
-<dimen name="text_title">24sp</dimen>
-<dimen name="text_content">16sp</dimen>
-<dimen name="text_content_2">12sp</dimen>
+    <dimen name="text_title">24sp</dimen>
+    <dimen name="text_content">16sp</dimen>
+    <dimen name="text_content_2">12sp</dimen>
 
-<dimen name="app_bar_height">320dp</dimen>
-<dimen name="item_width">320dp</dimen>
+    <dimen name="app_bar_height">480dp</dimen>
+    <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="item_width">320dp</dimen>
 </resources>
