--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,19 @@
         <item name="android:textColor">@color/grey_Dark</item>
     </style>
 
+    <style name="TextContent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginBottom">@dimen/margin_m</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_content</item>
+    </style>
+
+    <style name="Line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_m</item>
+        <item name="android:background">@color/line</item>
+    </style>
+
 </resources>
